# simna

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  check_docstrings.py  check_maintainability.py  check_types.py  curl_commands.md  debug_auth.py  docker-compose.yml  generate_openapi.py  locustfile.py  pyproject.toml  pytest.ini  requirements.txt  run_app.py  run_app_secure.py  run_ci_checks.sh  run_dast.sh  run_tests.py  test_backend_translation.py  test_prod_security.py  test_translation_api.py  test_user_flow.sh  verify_auth_fix.py
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/app/: __init__.py
backend/app/api/: __init__.py  api.py  schemas.py
backend/app/api/endpoints/: __init__.py  auth.py  notes.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/services/: __init__.py  translation.py
backend/app/tests/: __init__.py  conftest.py  performance_test.py  test_auth.py  test_message_translation.py  test_notes.py  test_notes_translation.py  test_translation.py  test_user_workflow.py
backend/tests/: test_notes.py
frontend/: __init__.py  app.py
frontend/components/: __init__.py  auth.py  notes.py
frontend/services/: __init__.py  api.py  auth_service.py  notes_service.py
frontend/state/: __init__.py  app_state.py
frontend/tests/: test_frontend_workflow.py  test_notes.py
frontend/utils/: __init__.py  theme.py  validators.py
